First implementation of Camera Preview

--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -7,38 +7,26 @@
     tools:context=".ui.CameraFragment">
 
 
-    <View
+    <androidx.camera.view.PreviewView
         android:id="@+id/camera_preview"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="@color/black"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/camera_controls"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/camera_controls_background"
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/take_picture_button"
+        android:layout_width="@dimen/take_picture_button_width"
+        android:layout_height="@dimen/take_picture_button_height"
+        android:layout_margin="20dp"
+        android:src="@drawable/take_picture_button_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="@dimen/take_picture_button_width"
-            android:layout_height="@dimen/take_picture_button_height"
-            android:layout_margin="20dp"
-            android:src="@drawable/take_picture_button_background"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-
-            />
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
