--- a/app/src/main/res/navigation/camera_nav.xml
+++ b/app/src/main/res/navigation/camera_nav.xml
@@ -9,5 +9,17 @@
         android:id="@+id/cameraFragment"
         android:name="com.example.simplecamera.ui.CameraFragment"
         android:label="fragment_camera"
-        tools:layout="@layout/fragment_camera" />
+        tools:layout="@layout/fragment_camera">
+        <action
+            android:id="@+id/action_cameraFragment_to_pictureFragment"
+            app:destination="@id/pictureFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/pictureFragment"
+        android:name="com.example.simplecamera.ui.PictureFragment"
+        android:label="PictureFragment">
+        <argument
+            android:name="uri"
+            app:argType="android.net.Uri" />
+    </fragment>
 </navigation>
